versioned file endpoints (((mostly))) complete
